# cbfkit

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .mailmap  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  conftest.py  develop-main-merge-pr-body.md  docker-compose.yml  gpu.Dockerfile  mypy.ini  pyproject.toml  pytest.ini  renaming_plan.md  repro_issue.py  reproduce_nan_output.py  reproduce_nan_status.py  reproduce_params.py  setup.py  test_import.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/cbfkit-container/: devcontainer.json
.devcontainer/cbfkit-gpu-container/: devcontainer.json
.github/workflows/: ci.yml
.jules/: bolt.md  examples_tutorials_tracking.md  relay_planner.py  relay_tasks.json
benchmarks/: benchmark_vanilla_cbf.py  qp_solver_comparison.py  scout_jit_compile.py  scout_jit_compile_counter.py
configs/: sweep_alpha_cbf.yaml  sweep_falsifier_cbf.yaml  sweep_optuna_cbf.yaml  tutorial_sweep_grid.yaml  tutorial_sweep_optuna.yaml
configs/cpu/: sweep_falsifier.yaml  sweep_grid.yaml  sweep_optuna.yaml
configs/gpu/: sweep_falsifier.yaml  sweep_grid.yaml  sweep_optuna.yaml
docs/: assumptions.md  bolt_commit_inventory.tsv  bolt_commit_inventory_local_bolt.tsv  bolt_dependency_graph_analysis.tsv  bolt_develop_merge_playbook.md  bolt_integration_backlog.tsv  bolt_merge_execution_plan.md  bolt_merge_readiness_scorecard.md  bolt_premerge_design_review.md  bolt_remaining_integration_runbook.md  bolt_semantic_conflict_matrix.tsv  docstring.txt  jules_artifact_policy.md  strategic_product_review.md  tutorial_entrypoint_migration.md
examples/: README.md  __init__.py  human_support_robot.py  template.py  unicycle_start_to_goal.py
examples/adaptive_cvar_cbf/: __init__.py  adaptive_cvar_cbf.py  adaptive_cvar_cbf_cbfkit_demo.py
examples/diagnostics/: jit_recompile_check.py  qp_solver_stress_test.py
examples/differential_drive/: __init__.py  augmented_dynamic_obstacle_cbf.py  barrier_activated_cbf.py  dynamic_obstacle_cbf.py  human_aware_mppi_cbf.py  multi_agent_cbf.py  multi_scenario_human_aware.py  single_robot_cbf.py
examples/fixed_wing/: __init__.py
examples/gymnasium/: README.md  safe_single_integrator.py
examples/human_support_robot/: main.py  specifications.py
examples/neural_cbf/: neural_cbf_obstacle_avoidance.py
examples/pedestrian/: __init__.py  crowded_demo.py  head_on_demo.py  overtaking_demo.py  pedestrian_manager_demo.py  star_burst_demo.py
examples/rss_workshop/: generate_new_system.py  visualizations.py
examples/single_integrator/: __init__.py
examples/unicycle/: __init__.py  vanilla_cbf_start_to_goal_main.py
examples/van_der_pol/: __init__.py
examples/wip/: 04-Tutorial-SCBF-Dynamic-Obstacles.py  cbf_create.py  cbftemp.py  mathforTut3.py  omni_collision_avoidance.py  test.py  tutorial.py  tutorial_ellipse.py  tutorial_nl.py  tutorial_sym.py  tutorial_sym_ac_sh.py  tutorial_sym_nl.py  tutorial_sym_nl_sh_bh.py  tv_F.py  tv_FandG.py  tv_G.py
results/verification_logs/: 2026-02-15_182330_report.md
scripts/: check_jules_policy.sh  plot_gpu_speedup.py  render_showcase.py  run_premerge_gate.sh  validate_optional_dependency_contracts.py
src/cbfkit/: __init__.py  agent.py  cbf.py  cbf_controller.py  controller.py  func_ros_adapter.py  old_system.py  risk_aware_cbf_controller.py  solvers.py  system.py  utils.py
tests/: conftest.py  test_cbf_clf_relaxation_coupling.py  test_cbfkit_seed.py  test_config_reproducibility.py  test_differential_drive_examples.py  test_dx_improvements.py  test_examples_and_tutorials.py  test_examples_import_path_bootstrap.py  test_monte_carlo_gpu.py  test_path_integral_barrier_semantics.py  test_qp_solver_shapes.py  test_quadrotor_geometric_controller.py  test_quadrotor_semantics.py  test_rectify_relative_degree_api.py  test_rectify_relative_degree_compatibility.py  test_rectify_relative_degree_roots.py  test_rectify_relative_degree_safety.py  test_rectify_relative_degree_tolerance.py  test_ros_controller_wrappers_smoke.py  test_sensor_semantics.py  test_simulation_seed.py  test_stochastic_barrier_semantics.py  test_tutorial_migration_aliases.py  test_uncertainty_determinism.py  test_uncertainty_reproducibility.py  test_zeroing_barrier_semantics.py
tests/benchmarks/: benchmark_cbf_clf_controller.py  benchmark_constraint_scaling.py  benchmark_mppi.py  benchmark_recompilation_trap.py  benchmark_relaxation_sensitivity.py  benchmark_simulator_jit.py  benchmark_solver_iterations.py  benchmark_warm_start.py  scout_allocation_pressure.py  scout_constraint_conditioning.py  scout_infeasibility_analysis.py  scout_jit_compile_count.py  scout_lie_derivative_scaling.py  scout_runtime_breakdown.py  scout_safety_violation.py  scout_solver_stats.py  scout_trace_complexity.py  test_sweep.py
tests/test_benchmarks/: test_monte_carlo_gpu_benchmark.py  test_runner.py
tests/test_certificates/: test_certificate_package.py  test_certificate_shape_safety.py  (+12 more)
tools/: dump_mppi_failing_qp.py
tutorials/: 00-Preparation.md  01-CBF2Quadratic.md  01-DerivativeB.md  01-Tutorial-CBF-Static-Obstacles-superellipse.py  01-Tutorial-CBF-Static-Obstacles.ipynb  01-Tutorial-CBF-Static-Obstacles.py  01A-Tutorial-CBF-Static-Obstacles.py  02-CBF2Quadratic2.md  02-DerivativeB2.md  02-Tutorial-CBF-Dynamic-Obstacles.ipynb  02-Tutorial-CBF-Dynamic-Obstacles.py  02A-Tutorial-CBF-Dynamic-Obstacles.py  03-LieDerivatives.md  03-Tutorial-HOCBF-Static-Obstacles.ipynb  03-Tutorial-HOCBF-Static-Obstacles.py  README.md  __init__.py  augmented_state_example.ipynb  augmented_state_example.py  cart_pole.py  code_generation_example.py  code_generation_tutorial.ipynb  jax_stl.py  jax_stl_efficient.py  mppi_cbf_reach_avoid.py  mppi_example.py  mppi_example2.py  mppi_functional.py  mppi_stl_reach_avoid.py  mppi_stochastic_cbf_reach_avoid.py  multi_robot_3d_reachavoid.py  multi_robot_coordination.ipynb  multi_robot_coordination_test.py  multi_robot_double_integrator.py  multi_robot_example.ipynb  multi_robot_example.py  multi_robot_test.py  n-robot-di.py  parameter_sweep_tutorial.py  plot_mppi.py  (+12 more)
(+759 files in other folders)
