[project]
name = "cbfkit"
version = "0.1.1"
description = "A Control Barrier Function Toolbox for Robotics Applications"
authors = [
    {name = "Mitchell Black", email = "6lack.mitchell@gmail.com"},
    {name = "Bardh Hoxha", email = "bardhh@gmail.com"},
    {name = "Hardik Parwana", email = "parwanahardik@gmail.com"},
    {name = "Georgios Fainekos", email = "bardhh@gmail.com"},
    {name = "Hideki Okamoto", email = "bardhh@gmail.com"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "jax>=0.4.23",
    "jaxlib>=0.4.23",
    "cvxopt>=1.3.2,<2.0",
    "kvxopt>=1.3.2.0,<2.0",
    "pyyaml>=6.0.1,<7.0",
    "setuptools>=69.0.3,<70.0",
    "black>=23.12.1,<24.0",
    "jaxopt>=0.8.3,<0.9",
    "control>=0.9.4,<1.0",
    "matplotlib>=3.8.2,<4.0",
    "pandas>=2.1.4,<3.0",
    "cvxpy>=1.4.1,<2.0",
    "cvxpylayers>=0.1.6,<0.2",
    "casadi>=3.6.4,<4.0",
    "tqdm>=4.66.2,<5.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.2",
    "pytest-cov",
    "python-dotenv>=1.2.1",
]
dev = [
    "black>=23.12.1,<24.0",
    "mypy>=1.8.0,<2.0",
    "cmake>=3.28.1,<4.0",
    "cython>=3.0.8,<4.0",
    "setuptools>=69.0.3,<70.0",
    "jupyter>=1.0.0,<2.0",
    "pytest>=8.0.2",
    "ruff>=0.3.4",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tutorials"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["D", "D104", "D401", "F401", "E402", "D205", "D209","E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.pip]
system = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.14",
    "jupyter>=1.0.0",
]
