[project]
name = "cbfkit"
dynamic = ["version"]
description = "A Control Barrier Function Toolbox for Robotics Applications"
authors = [
    {name = "Mitchell Black", email = "6lack.mitchell@gmail.com"},
    {name = "Bardh Hoxha", email = "bardhh@gmail.com"},
    {name = "Hardik Parwana", email = "parwanahardik@gmail.com"},
    {name = "Georgios Fainekos"},
    {name = "Hideki Okamoto"}
]
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "jax>=0.4.23",
    "cvxopt>=1.3.2,<2.0; platform_machine != 'aarch64' and platform_machine != 'arm64'",
    "kvxopt>=1.3.2.0,<2.0; platform_machine == 'aarch64' or platform_machine == 'arm64'",
    "jaxopt>=0.8.3,<0.9",
    "control>=0.9.4,<1.0",
    "tqdm>=4.66.2,<5.0"
]

[project.urls]
Repository = "https://github.com/bardhh/cbfkit"

[project.optional-dependencies]
casadi = [
    "casadi>=3.6.4,<4.0",
]
vis = [
    "matplotlib>=3.8.2,<4.0",
]
codegen = [
    "black>=23.12.1,<24.0",
    "jinja2>=3.0.0",
]
test = [
    "pytest>=8.0.2",
    "pytest-cov",
    "python-dotenv>=1.2.1",
]
dev = [
    "black>=23.12.1,<24.0",
    "mypy>=1.8.0,<2.0",
    "jupyter>=1.0.0,<2.0",
    "pytest>=8.0.2",
    "ruff>=0.3.4",
    "python-dotenv>=1.2.1",
    "pytest-cov",
    "casadi>=3.6.4,<4.0",
    "matplotlib>=3.8.2,<4.0",
    "jinja2>=3.0.0",
]

[build-system]
requires = ["setuptools>=69.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "cbfkit._version.__version__"}

[tool.setuptools.package-data]
"cbfkit" = ["codegen/templates/*.j2", "py.typed"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["tutorials"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["D", "D104", "D401", "F401", "E402", "D205", "D209","E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.uv.pip]
system = true

[dependency-groups]
dev = [
    "black>=23.12.1,<24.0",
    "mypy>=1.8.0,<2.0",
    "jupyter>=1.0.0,<2.0",
    "pytest>=8.0.2",
    "ruff>=0.3.4",
    "python-dotenv>=1.2.1",
]
